# genesis

./: .gitignore  AGENTS.md  INITIAL_ARCHITECTURE_REVIEW.md  README.md  fix_bounds.py  fix_syntax.py  fix_tests.py
docs/: AI_HANDOFF.md  ARCHITECTURE.md  ARCHITECTURE_BASELINE.md  ARCHITECTURE_DECISIONS.md  CAPABILITY_GRAPH.md  CODING_STANDARDS.md  CURRENT_STATE.md  DETERMINISM.md  DISCOVERY_CHARTER.md  ECS_GUIDELINES.md  EMERGENCE_AUDIT.md  FAILURE_CRITERIA.md  FORBIDDEN_IMPLEMENTATIONS.md  GENESIS_CONSTITUTION.md  GENESIS_CONTEXT.md  GLOSSARY.md  GOVERNANCE.md  MILESTONE10_ARCHITECTURE.md  MILESTONE2_REVIEW.md  MILESTONE3_ARCHITECTURE.md  MILESTONE5_ARCHITECTURE.md  MILESTONE6_ARCHITECTURE.md  MILESTONE7_ARCHITECTURE.md  MILESTONE8_ARCHITECTURE.md  MILESTONE9_ARCHITECTURE.md  MILESTONE_STATUS.md  PHASE1_WORLD_TECH_SPEC.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_LIFE_TECH_SPEC.md  PRINCIPLES.md  (+7 more)
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/agent/: components.rs  diagnostics.rs  events.rs  mod.rs  resources.rs  sensing.rs  systems.rs
engine/src/app/: events.rs  mod.rs  plugins.rs  schedules.rs
engine/src/config/: mod.rs  world_bounds.rs  world_config.rs
engine/src/persistence/: errors.rs  io.rs  mod.rs  snapshot.rs  systems.rs
engine/src/rng/: mod.rs  seed.rs
engine/src/testing/: determinism.rs  fixtures.rs  mod.rs
engine/src/time/: mod.rs  season_state.rs  simulation_clock.rs
engine/src/validation/: errors.rs  mod.rs  systems.rs
engine/src/world/: climate.rs  coord.rs  energy.rs  generation.rs  mod.rs  resource.rs  spatial.rs  terrain.rs
(+18 files in other folders)
