[package]
name = "genesis-engine"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Team"]
description = "Simulation Engine for Genesis — An Artificial Civilization Engine"

[dependencies]
bevy_ecs = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
